service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-nginx-service
spec:
  selector:
    app: meu-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
